Dodanie plików projektu

--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "passport-local": "1.0.0",
     "prettier": "2.6.2",
     "react-scripts": "4.0.3",
-    "start-server-and-test": "1.14.0",
+    "start-server-and-test": "^1.14.0",
     "ts-node": "10.7.0",
     "typescript": "4.6.3"
   },
@@ -153,8 +153,8 @@
     "cypress:run": "cypress run",
     "cypress:run:component": "cypress run --component",
     "cypress:run:mobile": "cypress run --config viewportWidth=375,viewportHeight=667",
-    "test": "yarn cypress:open",
-    "test:headless": "yarn cypress:run",
+    "test": "start-test 3000 cypress:open",
+    "test:headless": "start-test 3000 cypress:run",
     "test:api": "yarn cypress:run --spec 'cypress/tests/api/*'",
     "test:unit": "react-scripts test --runInBand",
     "test:unit:ci": "react-scripts test --watchAll false --ci --runInBand",
